--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.16.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
