--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.16.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
