--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "redux-persist": "^6.0.0"
@@ -28,6 +29,7 @@
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.14",
+    "@types/react-input-mask": "^3.0.4",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
