--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
+    "react-heatmap-grid": "^0.9.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-tooltip": "^5.23.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.15",
+    "@types/react-calendar-heatmap": "^1.6.6",
     "@types/react-dom": "^18.2.14",
     "@types/react-input-mask": "^3.0.4",
     "@types/yup": "^0.32.0",
