--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.16.2",
     "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
+    "date-fns-tz": "^2.0.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
@@ -26,6 +27,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-tooltip": "^5.23.0",
+    "recharts": "^2.9.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
