--- a/package.json
+++ b/package.json
@@ -13,24 +13,35 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
-    "@mui/material": "^5.14.14",
+    "@mui/lab": "^5.0.0-alpha.153",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@mui/x-data-grid": "^6.16.2",
+    "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-heatmap-grid": "^0.9.0",
     "react-input-mask": "^2.0.4",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-tooltip": "^5.23.0",
     "recharts": "^2.9.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.15",
     "@types/react-calendar-heatmap": "^1.6.6",
